QSystemTrayIcon example: ignore non-spontaneous QCloseEvent

Apparently this code is needed on other platforms now, not only macOS.

Fixes: QTBUG-98504
Change-Id: Ie0a7e38609e8fc8c11915784dd3652a3517bb639
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>
(cherry picked from commit 46cadf7b48288fce4de6147ae38de493354c23d0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>