examples/widgets/desktop/systray/window.cpp
@@ -111,11 +111,8 @@ void Window::setVisible(bool visible)
 //! [2]
 void Window::closeEvent(QCloseEvent *event)
 {
-#ifdef Q_OS_MACOS
-    if (!event->spontaneous() || !isVisible()) {
+    if (!event->spontaneous() || !isVisible())
         return;
-    }
-#endif
     if (trayIcon->isVisible()) {
         QMessageBox::information(this, tr("Systray"),
                                  tr("The program will keep running in the "
